cluster/apps/wiki/wiki/networkpolicies/wiki.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: wiki
  namespace: wiki
spec:
  endpointSelector:
    matchLabels:
      app: wiki
      component: wiki
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy-gateway
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: envoy-gateway
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: wiki-postgres-17
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": wiki
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000" # /healthz endpoint
              protocol: TCP
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy-gateway
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: envoy-gateway
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "443" # oidc: to access load balancer (https://auth.${BASE_DOMAIN})
              protocol: TCP
    - toFQDNs:
        - matchName: graph.requarks.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
